mage a few changes to auth
